name: tzworld-builder
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 Dan Plubell <danplubell@gmail.com>
maintainer: Dan Plubell <danplubell@gmail.com>
synopsis: Utility for building the tzworld database used by tzworld-api
description:  This utility will convert a geoJSON file that contains the tz_world data into a database
              that can be used for looking up the time zone by location
category: Time
author: Dan Plubell <danplubell@gmail.com>
tested-with: GHC ==7.10
extra-source-files:
    CHANGELOG.md
    README.md
data-files:
    tzworld.db
library
    exposed-modules:
        Data.TZworld.Builder            
    other-modules:
        Data.TZworld.Internal.Types
        Paths_tzworld
    build-depends:
                  base ==4.*
                , sqlite-simple >=0.4
                , aeson >=0.9
                , bytestring >=0.10
                , binary >=0.7
                , containers >=0.5
                , text >=0.11 
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

executable tzwb
    main-is: Main.hs
    build-depends:
        base -any,
        tzworld-builder -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

